--- a/libraries.gradle
+++ b/libraries.gradle
@@ -4,6 +4,7 @@ allprojects {
                 guava            : '21.0',
                 kotlin           : '1.1.0-rc-91',
                 kubernetes_model : '1.0.67',
+                junit            : '4.12',
         ]
     }
 }
