fabric8io client example

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -1,10 +1,12 @@
 allprojects {
     ext {
         versions = [
-                guava            : '21.0',
-                kotlin           : '1.1.0-rc-91',
-                kubernetes_model : '1.0.67',
-                junit            : '4.12',
+                bintray           : '1.7.3',
+                guava             : '21.0',
+                kotlin            : '1.1.0-rc-91',
+                kubernetes_client : '2.2.1',
+                kubernetes_model  : '1.0.67',
+                junit             : '4.12',
         ]
     }
 }
