--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ subprojects {
         maven { setUrl("https://repo.gradle.org/gradle/repo") }
     }
 
-    apply plugin: "java"
+    apply plugin: "java-library"
     apply plugin: "jacoco"
 
     sourceCompatibility = 1.8
