--- a/kubernetes/dsl/build.gradle
+++ b/kubernetes/dsl/build.gradle
@@ -1,5 +1,33 @@
+apply plugin: "com.jfrog.bintray"
 apply plugin: "kotlin"
 apply plugin: "maven-publish"
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:${versions.bintray}"
+    }
+}
+
+bintray {
+    user = "fkorotkov"
+    key  = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    publications = ['maven']
+    pkg {
+        repo = 'maven'
+        name = 'k8s-kotlin-dsl'
+        userOrg = 'fkorotkov'
+        licenses = ['MIT']
+        vcsUrl = 'git@github.com:fkorotkov/k8s-kotlin-dsl.git'
+        version {
+            name = '0.1'
+            desc = 'Kotlin DSL for Kubernetes'
+            released  = new Date()
+        }
+    }
+}
 
 publishing {
     publications {
