--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,10 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
-script: |-
- set -e
- ./gradlew check
- [[ -z ${TRAVIS_TAG+x} ]] || ./gradlew :kubernetes:dsl:bintrayUpload
+script: ./gradlew check
+
+deploy:
+  provider: script
+  script: ./gradlew :kubernetes:dsl:bintrayUpload
+  on:
+    tags: true
