updated Guava and Kotlin

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -2,8 +2,8 @@ allprojects {
     ext {
         versions = [
                 bintray           : '1.7.3',
-                guava             : '21.0',
-                kotlin            : '1.1.0-rc-91',
+                guava             : '22.0',
+                kotlin            : '1.1.2-5',
                 kubernetes_client : '2.2.1',
                 kubernetes_model  : '1.0.67',
                 junit             : '4.12',
