--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,6 +8,7 @@ check_task:
   cleanup_before_cache_script:
     - rm -rf ~/.gradle/caches/$GRADLE_VERSION/
     - rm -f ~/.gradle/caches/user-id.txt
+    - rm -f ~/.gradle/caches/journal-1/file-access.bin
     - find ~/.gradle/caches/ -name "*.lock" -type f -delete
 
 deploy_task:
