--- a/kubernetes/dsl/build.gradle
+++ b/kubernetes/dsl/build.gradle
@@ -3,7 +3,7 @@ apply plugin: "kotlin"
 apply plugin: "maven-publish"
 
 ext {
-    current_k8s_dsl_version = System.getenv().get("CIRRUS_TAG", "2.0.0-SNAPSHOT")
+    current_k8s_dsl_version = System.getenv().getOrDefault("CIRRUS_TAG", "2.0.0-SNAPSHOT")
 }
 
 buildscript {
