--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -21,6 +21,8 @@ task:
 
 deploy_task:
   only_if: $CIRRUS_TAG != ''
+  container:
+    image: gradle:jdk8
   depends_on:
     - Test (JDK 8)
     - Test (JDK 11)
