--- a/DSLs/kafka/model/build.gradle
+++ b/DSLs/kafka/model/build.gradle
@@ -1,13 +1,16 @@
+apply plugin: "maven-publish"
 apply plugin: "kotlin"
 apply plugin: "jsonschema2pojo"
 
 buildscript {
     repositories {
+        mavenLocal()
         mavenCentral()
     }
 
     dependencies {
         classpath libraries['org.jsonschema2pojo:jsonschema2pojo-gradle-plugin']
+        classpath "com.fkorotkov:kubernetes-kafka-annotator:${current_k8s_dsl_version}"
     }
 }
 
@@ -15,6 +18,17 @@ sourceSets {
     main {
         java {
             srcDir 'src/main/java-gen'
+        }
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId 'com.fkorotkov'
+            artifactId 'kubernetes-kafka-model'
+            version current_k8s_dsl_version
+            from components.java
         }
     }
 }
@@ -27,8 +41,15 @@ jsonSchema2Pojo {
     includeJsr303Annotations = false
     includeToString = false
     includeHashcodeAndEquals = false
+    customAnnotator = "io.fabric8.kafka.KafkaTypeAnnotator"
 }
 
 dependencies {
+    annotationProcessor libraries['io.sundr:builder-annotations']
+    annotationProcessor libraries['io.sundr:transform-annotations']
+
+    compile libraries['com.fasterxml.jackson.module:jackson-module-jaxb-annotations']
+    compile project(":DSLs:kafka:annotator")
     compile libraries['io.fabric8:kubernetes-client']
+    compile libraries['io.fabric8:kubernetes-model']
 }
