--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,8 +8,8 @@ task:
         image: gradle:jdk11
   gradle_cache:
     folder: ~/.gradle/caches
-  publish_local_script: gradle publishToMavenLocal
-  check_script: gradle :DSLs:kafka:annotator:check
+  publish_local_script: gradle :DSLs:kafka:annotator:publishToMavenLocal
+  check_script: gradle check
   cleanup_before_cache_script:
     - rm -rf ~/.gradle/caches/$GRADLE_VERSION/
     - rm -f ~/.gradle/caches/user-id.txt
