--- a/DSLs/kafka/model/build.gradle
+++ b/DSLs/kafka/model/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
     dependencies {
         classpath libraries['org.jsonschema2pojo:jsonschema2pojo-gradle-plugin']
-        classpath "com.fkorotkov:kubernetes-kafka-annotator:${current_k8s_dsl_version}"
+        classpath "com.fkorotkov:k8s-kafka-annotator:1.0"
     }
 }
 
