--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ subprojects {
     apply plugin: "java"
     apply plugin: "jacoco"
 
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+
     test {
         testLogging {
             exceptionFormat = 'full'
