--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,7 +8,7 @@ task:
         image: gradle:jdk11
   gradle_cache:
     folder: ~/.gradle/caches
-  check_script: gradle check
+  check_script: gradle check --stacktrace
   cleanup_before_cache_script:
     - rm -rf ~/.gradle/caches/$GRADLE_VERSION/
     - rm -f ~/.gradle/caches/user-id.txt
