No parallel execution and no ondemand config
Because of https://github.com/bintray/gradle-bintray-plugin/issues/264#issuecomment-458866766

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -33,4 +33,4 @@ deploy_task:
            :DSLs:zookeeper:model:bintrayUpload \
            :DSLs:zookeeper:client:bintrayUpload \
            :DSLs:zookeeper:dsl:bintrayUpload \
-           --info
+           --info --no-parallel
