Fixed false circular dependency
See https://github.com/gradle/kotlin-dsl-samples/issues/999#issuecomment-412457195

--- a/DSLs/kubernetes/generator/build.gradle
+++ b/DSLs/kubernetes/generator/build.gradle
@@ -8,7 +8,7 @@ run {
 }
 
 dependencies {
-    compile project(":generator")
+    compile project(":generator-base")
 
     compile libraries['org.jetbrains.kotlin:kotlin-stdlib']
     compile libraries['org.jetbrains.kotlin:kotlin-reflect']
