--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,8 +1,8 @@
 task:
   matrix:
-    - name: Test (JDK 11)
+    - name: Test (JDK 17)
       container:
-        image: gradle:jdk11
+        image: gradle:7-jdk11
   gradle_cache:
     folder: ~/.gradle/caches
   check_script: gradle check --stacktrace
